# blog-dashboard

./: README.md  README.rst  _50_blogs.py.example  manage.py  setup.cfg
blog_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
blogdashboard/: api.py  dashboard.py
blogdashboard/blogs/: forms.py  panel.py  tables.py  urls.py  views.py
blogdashboard/blogs/templates/blogs/: _create.html  _details.html  create.html  details.html  index.html
blogdashboard/static/animals/scss/: animals.scss  jquery.treetable.theme.default.css  screen.css  style.css
doc/source/: conf.py
