[metadata]
name = blog-dashboard
summary = Blog dashboard
description-file = README.rst
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Stratus Team
author-email = openstack-dev@lists.openstack.org

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    blogdashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
